--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.4",
+    "interact-js": "^2.0.1",
+    "interact.js": "^1.2.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
@@ -19,8 +21,12 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.25.0",
+    "node-sass": "^3.10.1",
     "nodemon": "^1.10.0",
     "react-router": "^2.6.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13"
   }
 }
